auto-grader-out.txt
I am run number 000667.
Pulling source code...
------------------------------------------------
Changes found in lab03
------------------------------------------------
*****************Examining lab03****************
******************* PART 1 BoatTest *********************
JUnit version 4.12
.toString
.getName
.getYearBuilt
.setName - instantiate with Lolipop,set to Little Minnow
.setYearBuilt - instantiate with 1960, set to 1965.

Time: 0.008

OK (5 tests)

+ 25.000 pts of 25.000
Total grade so far: 25.000
******************* PART 2 SailBoatTest *********************
JUnit version 4.12
.getPassengers
.setPassengers - instantiated with (Santa Maria, 1460, 40)updated to 41 using setPassengers
.toString
.SailBoat constructor - instantiate with (Santa Maria, 1460, 41)

Time: 0.008

OK (4 tests)

+ 25.000 pts of 25.000
Total grade so far: 50.000
******************* PART 3 TugBoatTest *********************
JUnit version 4.12
.toString - Theodore, 1989, 58
E.setCapacity - Theodore, 1989, 50 - use setCapacity to 58
.getCapacity - Theodore, 1989, 58
.TugBoat constructor - instantiate with (Santa Maria, 1460, 41)

Time: 0.012
There was 1 failure:
1) testToString(csu.csci325.TugBoatTest)
org.junit.ComparisonFailure: expected:<...e
Cargo capacity: 58[ tons]> but was:<...e
Cargo capacity: 58[]>
	at org.junit.Assert.assertEquals(Assert.java:115)
	at org.junit.Assert.assertEquals(Assert.java:144)
	at csu.csci325.TugBoatTest.testToString(TugBoatTest.java:79)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:50)
	at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
	at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:47)
	at org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:17)
	at org.junit.runners.ParentRunner.runLeaf(ParentRunner.java:325)
	at org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:78)
	at org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:57)
	at org.junit.runners.ParentRunner$3.run(ParentRunner.java:290)
	at org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:71)
	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:288)
	at org.junit.runners.ParentRunner.access$000(ParentRunner.java:58)
	at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:268)
	at org.junit.runners.ParentRunner.run(ParentRunner.java:363)
	at org.junit.runners.Suite.runChild(Suite.java:128)
	at org.junit.runners.Suite.runChild(Suite.java:27)
	at org.junit.runners.ParentRunner$3.run(ParentRunner.java:290)
	at org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:71)
	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:288)
	at org.junit.runners.ParentRunner.access$000(ParentRunner.java:58)
	at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:268)
	at org.junit.runners.ParentRunner.run(ParentRunner.java:363)
	at org.junit.runner.JUnitCore.run(JUnitCore.java:137)
	at org.junit.runner.JUnitCore.run(JUnitCore.java:115)
	at org.junit.runner.JUnitCore.runMain(JUnitCore.java:77)
	at org.junit.runner.JUnitCore.main(JUnitCore.java:36)

FAILURES!!!
Tests run: 4,  Failures: 1

+ 18.750 pts of 25.000
Total grade so far: 68.750
******************* PART 4 FleetTest *********************
*************COMPILATION ERROR*******************
tests/csu/csci325/FleetTest.java:80: error: cannot find symbol
        instance.removeBoat(name, year);
                ^
  symbol:   method removeBoat(String,int)
  location: variable instance of type Fleet
1 error
Compilation errors, please fix...
Auto-grader grade: 68.750
*****************Finished lab03****************
